answered last question

--- a/index.html
+++ b/index.html
@@ -109,15 +109,24 @@
         <ul>
             <li><span class="inline-img">this text has a background image</span></li>
         </ul>
+      <br>
         <p>
-        <h2>**************Control the display or visibility of HTML elements</h2>
+<div id='btn-show'>
+  
+  <input type="button" value="show" class='show'>
+  <input type="button" value="hide" class='hide'>
+  
+</div>
+        <section class="box-display">
+        <h2>Control the display or visibility of HTML elements</h2>
         <ul>
-            <li></li>
+            <li>this content is hidden until otherwise specified using display:none;</li>
         </ul>
+       </section>
         </p>
 
     </main>
-
+<script src="app.js"></script>
 </body>
 
 </html>
