--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         </div>
         </p>
         <p>
+        <h2>Describe how your browsers built-in styles affect custom styling efforts</h2>
         <ul>
-            <h2>***************Describe how your browsers built-in styles affect custom styling efforts</h2>
-
+            <li></li>
         </ul>
         </p>
         <p>
@@ -109,24 +109,24 @@
         <ul>
             <li><span class="inline-img">this text has a background image</span></li>
         </ul>
-      <br>
+        <br>
         <p>
-<div id='btn-show'>
-  
-  <input type="button" value="show" class='show'>
-  <input type="button" value="hide" class='hide'>
-  
-</div>
+        <div id='btn-show'>
+
+            <input type="button" value="show" class='show'>
+            <input type="button" value="hide" class='hide'>
+
+        </div>
         <section class="box-display">
-        <h2>Control the display or visibility of HTML elements</h2>
-        <ul>
-            <li>this content is hidden until otherwise specified using display:none;</li>
-        </ul>
-       </section>
+            <h2>Control the display or visibility of HTML elements</h2>
+            <ul>
+                <li>this content is hidden until otherwise specified using display:none;</li>
+            </ul>
+        </section>
         </p>
 
     </main>
-<script src="app.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
