--- a/index.html
+++ b/index.html
@@ -29,9 +29,17 @@
         </p>
         <p>
         <h2>Describe how your browsers built-in styles affect custom styling efforts</h2>
-        <ul>
-            <li></li>
-        </ul>
+        <div class="default-styles">
+            <ul>
+                <li>Every browser has default styling.</li>
+                <li>for example: <a href="https://www.w3schools.com/cssref/css_default_values.php">default browser
+                        link</a>
+                </li>
+                <li><a href="https://www.w3schools.com/cssref/css_default_values.php" class="link-style">stylized
+                        link</a>
+                </li>
+            </ul>
+        </div>
         </p>
         <p>
         <h2>Control the transparency of HTML elements using RGBa values</h2>
